add averageScorePerYear
